validation exercises, getting ready to standardize
