# routes/user.js
@@ -10,6 +10,6 @@ router.post('/', controller.createNewUser);
 router.put('/:id', controller.updateById);
 
 router.delete('/:id', controller.deleteById);
-router.delete('/deleteMany', controller.deleteManyByName);
+// router.delete('/deleteMany', controller.deleteManyByName);
 
 module.exports = router;
